+ 1.0.1 Desktop Version - Upcoming Mobile Version

--- a/index.html
+++ b/index.html
@@ -5,9 +5,173 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="desktop.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
 </head>
 <body>
-    
+    <!-- Image and text -->
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/Zepter-Logo.png" width="170" height="70" class="d-inline-block align-top" alt="">
+        </a>
+    </nav>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+               <img src="img/present_car.png" width="500px" height="230px" alt="">
+            </div>
+            <div class="col">
+                <h3 class="present_h3">SPECIJALNA PROMO PONUDA
+                I VREDNI POKLONI
+                ZA ČLANOVE CLUB LIVE 100</h3>
+                <p class="present_p">Promo ponuda važi do 9.12.2018.</p>
+                <span class="present_span"></span>
+                <h2 class="present_h2">ZEPTER PRAZNIČNA PROSLAVA,
+                    MADLENIANUM, JANUAR 2019.</h2>
+                <span class="present_span"></span>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <p class="justify">Kompanija Zepter Internacional svake godine priprema fantastične praznične ponude za svoje članove kluba Live 100! Tako je i ove godine. Sa zadovoljstvom vam predstavljamo sjajne pogodnosti koje važe samo do 9. 12. 2018!</p>
+        <span class="present_span"></span>
+    </div>
+
+    <div class="container">
+        <h2 class="present_h2">
+            ZEPTER MASTERPIECE POSUĐE
+        </h2>
+        <p class="margin-bottom">Masterpiece posuđe je revolucionarno, jedinstveno i trajno rešenje za pravilno pripremanje zdrave hrane. Patentirani sistem, superioran Zepter metal 316L, napredne tehnologije i inovativni dizajn omogućavaju pripremanje hrane na kontrolisanim temperaturama, bez dodavanja vode, masnoće ili soli. Hrana pripremljena u ovom posuđu zadržava prirodan izgled, ukus i aromu. Svi vitamini i hranljivi sastojci ostaju sačuvani u namirnicama. Sadrži manje kalorija i nema štetnih materija koje nastaju klasičnim pripremanjem. Kuvanjem u Masterpiece posuđu štedimo energiju, same namirnice, vreme i novac. I što je najvažnije – čuvamo svoje zdravlje.</p>
+    </div>
+    <div class="container_gallery">
+        <div class="row">
+            <div class="col">
+                <img src="img/posudje_1.jpg" width="500px" height="250px" alt="">
+            </div>
+            <div class="col">
+                <img src="img/posudje_2.jpg" width="500px" height="250px" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img src="img/posudje_3.jpg" width="500px" height="200px" alt="">
+            </div>
+            <div class="col">
+                <img src="img/posudje_4.jpg" width="500px" height="200px" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col_center">
+                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="container_gallery_mobile">
+        <div class="row">
+            <div class="col_center">
+                <img src="img/posudje_5.jpg" width="500px" height="250px" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col_center">
+                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col_center">
+                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col_center">
+                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col_center">
+                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <p class="masterpiece_posudje">
+        AKO ŽELITE DA KUPITE MASTERPIECE POSUĐE, POZOVITE CALL CENTAR <span class="golden">011 311 32 33</span>, OBRATITE SE SVOM KONSULTANTU, DOĐITE U ZEPTER PRODAVNICE U BEOGRADU I NOVOM SADU (ADRESE) ILI POSETITE SHOP.ZEPTER.RS
+        </p>
+        <span class="present_span"></span>
+    </div>
+    <div class="container">
+        <h2 class="present_h2">BIOPTRON MEDALL SA STALKOM I TESLA LIGHTWEAR NAOČARE</h2>
+        <p class="justify">
+                Bioptron medicinski aparat za svetlosnu terapiju, baziran na tehnologiji ovenčanoj Nobelovom nagradom, sertifikovan je za neinvazivno lečenje i prevenciju mnogobrojnih medicinskih stanja kao što su akne i svi dermatološki problemi, rane bilo kog porekla, bolovi, sportske povrede itd. Koristi se i za borbu protiv znakova starenja. Tretmani se rade dva puta dnevno, od 5 do 10 minuta,  i dokazano ubrzavaju izlečenje. Bioptron je namenjen i za kučnu i za profesionalnu upotrebu (u bolnicama i rehabilitacionim centrima).
+                <br><br>
+                Bioptron medicinski aparat za svetlosnu terapiju, baziran na tehnologiji ovenčanoj Nobelovom nagradom, sertifikovan je za neinvazivno lečenje i prevenciju mnogobrojnih medicinskih stanja kao što su akne i svi dermatološki problemi, rane bilo kog porekla, bolovi, sportske povrede itd. Koristi se i za borbu protiv znakova starenja. Tretmani se rade dva puta dnevno, od 5 do 10 minuta,  i dokazano ubrzavaju izlečenje. Bioptron je namenjen i za kučnu i za profesionalnu upotrebu (u bolnicama i rehabilitacionim centrima).
+        </p>
+        <div class="row">
+            <div class="col">
+                <img src="img/naocare_1.jpg" width="500px" height="350px" alt="">
+            </div>
+            <div class="col">
+                <img src="img/bioptron_1.jpg" width="500px" height=350px" alt="">
+            </div>
+        </div>
+        <br>
+        <p class="masterpiece_posudje">
+                AKO ŽELITE DA KUPITE MASTERPIECE POSUĐE, POZOVITE CALL CENTAR <span class="golden">011 311 32 33</span>, OBRATITE SE SVOM KONSULTANTU, DOĐITE U ZEPTER PRODAVNICE U BEOGRADU I NOVOM SADU (ADRESE) ILI POSETITE SHOP.ZEPTER.RS
+                </p>
+                <span class="present_span"></span>
+    </div>
+    <div class="container">
+            <h2 class="present_h2">THERAPY AIR ION</h2>
+            <p class="justify">
+                    Svakodnevno udahnemo više od 11.000 litara vazduha. Devedeset odsto vremena provodimo u zatvorenom prostoru – u našim domovima, na radnom mestu, u školi, u fitnes centrima, gde nivo zagađivača i alergena može biti 100 puta veći nego u već opasno zagađenoj spoljašnjoj sredini. Zagađen vazduh čini nas bolesnim i glavni je uzrok mnogih opasnih oboljenja. Zaštitite sebe i svoju porodicu aparatom Therapy Air iOn – vodećim 5-stepenim sistemom za prečišćavanje vazduha – za čist i zdrav vazduh.
+            </p>
+            <div class="row">
+                <div class="col">
+                    <img class="therapy_air" src="img/therapy_1.jpg" width="800px" height="450px">
+                </div>
+            </div>
+            <br>
+            <p class="masterpiece_posudje">
+                    AKO ŽELITE DA KUPITE MASTERPIECE POSUĐE, POZOVITE CALL CENTAR <span class="golden">011 311 32 33</span>, OBRATITE SE SVOM KONSULTANTU, DOĐITE U ZEPTER PRODAVNICE U BEOGRADU I NOVOM SADU (ADRESE) ILI POSETITE SHOP.ZEPTER.RS
+                    </p>
+                    <span class="present_span"></span>
+    </div>
+    <div class="container">
+            <h2 class="present_h2">DOĐITE U MADLENIANUM!</h2>
+            <p class="justify">
+                    Svaki član Club Live 100 koji iskoristi praznične popuste i ostvari ličnu kupovinu u vrednosti od 500 evra stiče pravo na učešće na Zepter prazničnoj proslavi u pozorištu Madlenianum. Proslava se održava u januaru 2019, a o tačnom datumu ćemo vas naknadno obavestiti. Madlenianum je prva privatna opera u Evropi, zadužbina gospođe Madlene Zepter. Već dvadeset godina okuplja stvaraoce i afirmisane dramske, operske i baletske umetnike iz zemlje i sveta. Dođite da zajedno proslavimo Zepter praznik!
+            </p>
+            <span class="present_span"></span>
+    </div>
+    <div class="container">
+            <h2 class="present_h2">FANTASTIČNI POKLONI ZA SVE GOSTE</h2>
+            <p class="justify">
+                    Na proslavi vas čekaju mnogobrojni vredni pokloni! Članovi kluba Live 100 osvajaju po jedan kupon na svakih 500 evra lične kupovine i tako stiču pravo da osvoje Zepter poklone! Na primer, ako vaša kupovina iznosi 1.500 evra, dobićete tri kupona. Dakle, na svakih 500 evra dobija se jedan kupon koji predstavlja vašu šansu za dobitak.            </p>
+            <div class="row">
+                <img class="nagrade" src="img/nagrade_1.jpg" width="1200px" height="650px">
+            </div>
+    </div>
+    <div class="automobil">
+            <img src="img/auto_1.jpg" width="450px" height="550px">
+            <h2 class="present_h2">FANTASTIČNI POKLONI ZA SVE GOSTE</h2>
+            <h1 class="present_h2">AUTOMOBIL!</h1>
+    </div>
+    <div class="container">
+            <span class="present_span"></span>
+            <p class="napomena">
+                    Napomena:<br>
+                    Ukoliko klijent propusti uplatu bilo koje mesečne rate, gubi pravo na pogodnosti stečene potpisivanjem ugovora
+                    <br>Nagrada se ne može menjati za novac
+                    <br>Član kluba Live 100 može biti izvučen u lutriji samo jedanput
+                    <br>* Super premija – automobil dodeljuje se ukoliko ukupna prodaja tokom trajanja akcije bude 200.000 EUR     
+            </p>
+    </div>
+    <footer>
+        <img src="img/Zepter-Logo.png" width="170px" height="80px" alt="">
+    </footer>
 </body>
 </html>
