--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Zepter Promo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="mobile.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
@@ -14,14 +15,14 @@
     <!-- Image and text -->
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="img/Zepter-Logo.png" width="170" height="70" class="d-inline-block align-top" alt="">
+            <img class="logo"   src="img/Zepter-Logo.png" width="170" height="70" class="d-inline-block align-top" alt="">
         </a>
     </nav>
 
     <div class="container">
         <div class="row">
             <div class="col">
-               <img src="img/present_car.png" width="500px" height="230px" alt="">
+               <img class="present_car" src="img/present_car.png" width="500px" height="230px" alt="">
             </div>
             <div class="col">
                 <h3 class="present_h3">SPECIJALNA PROMO PONUDA
@@ -70,30 +71,30 @@
             </div>
         </div>
     </div>
-    <div class="container_gallery_mobile">
+    <div class="container_mobile" media="screen and (min-width: 320px) and (max-width: 480px)">
         <div class="row">
             <div class="col_center">
-                <img src="img/posudje_5.jpg" width="500px" height="250px" alt="">
+                <img src="img/posudje_1.jpg" width="250px" height="150px" >
             </div>
         </div>
         <div class="row">
             <div class="col_center">
-                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+                <img src="img/posudje_2.jpg" width="250px" height="150px" >
             </div>
         </div>
         <div class="row">
             <div class="col_center">
-                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+                <img src="img/posudje_3.jpg" width="250px" height="120px" >
             </div>
         </div>
         <div class="row">
             <div class="col_center">
-                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+                <img src="img/posudje_4.jpg" width="250px" height="100px" >
             </div>
         </div>
         <div class="row">
             <div class="col_center">
-                <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+                <img src="img/posudje_5.jpg" width="250px" height="100px" >
             </div>
         </div>
     </div>
@@ -112,10 +113,10 @@
         </p>
         <div class="row">
             <div class="col">
-                <img src="img/naocare_1.jpg" width="500px" height="350px" alt="">
+                <img class="naocare_1" src="img/naocare_1.jpg" width="500px" height="350px" alt="">
             </div>
             <div class="col">
-                <img src="img/bioptron_1.jpg" width="500px" height=350px" alt="">
+                <img class="bioptron_1" src="img/bioptron_1.jpg" width="500px" height=350px" alt="">
             </div>
         </div>
         <br>
@@ -131,7 +132,7 @@
             </p>
             <div class="row">
                 <div class="col">
-                    <img class="therapy_air" src="img/therapy_1.jpg" width="800px" height="450px">
+                    <img class="therapy_air" src="img/therapy_1.jpg">
                 </div>
             </div>
             <br>
