--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zepter Promo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link rel="stylesheet" media="screen and (min-width: 320px) and (max-width: 480px)" href="mobile.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
@@ -15,7 +14,7 @@
     <!-- Image and text -->
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img class="logo"   src="img/Zepter-Logo.png" width="170" height="70" class="d-inline-block align-top" alt="">
+            <img class="logo" src="img/Zepter-Logo.png" width="170" height="70" class="d-inline-block align-top" alt="">
         </a>
     </nav>
 
@@ -153,7 +152,7 @@
             <p class="justify">
                     Na proslavi vas čekaju mnogobrojni vredni pokloni! Članovi kluba Live 100 osvajaju po jedan kupon na svakih 500 evra lične kupovine i tako stiču pravo da osvoje Zepter poklone! Na primer, ako vaša kupovina iznosi 1.500 evra, dobićete tri kupona. Dakle, na svakih 500 evra dobija se jedan kupon koji predstavlja vašu šansu za dobitak.            </p>
             <div class="row">
-                <img class="nagrade" src="img/nagrade_1.jpg" width="1200px" height="650px">
+                <img class="nagrade" src="img/nagrade_1.jpg">
             </div>
     </div>
     <div class="automobil">
