--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 <body>
@@ -34,8 +35,6 @@
                 <span class="present_span"></span>
             </div>
         </div>
-    </div>
-
     <div class="container">
         <p class="justify">Kompanija Zepter Internacional svake godine priprema fantastične praznične ponude za svoje članove kluba Live 100! Tako je i ove godine. Sa zadovoljstvom vam predstavljamo sjajne pogodnosti koje važe samo do 9. 12. 2018!</p>
         <span class="present_span"></span>
@@ -67,10 +66,11 @@
         <div class="row">
             <div class="col_center">
                 <img src="img/posudje_5.jpg" width="500px" height="200px" alt="">
+
             </div>
         </div>
     </div>
-    <div class="container_mobile" media="screen and (min-width: 320px) and (max-width: 480px)">
+    <div class="container_mobile">
         <div class="row">
             <div class="col_center">
                 <img src="img/posudje_1.jpg" width="250px" height="150px" >
